# Ising-ml-clriticality

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
notebooks/: analysis.ipynb  dnn-ising-latest.ipynb
src/ising/: __init__.py
src/ising/data/: __init__.py  data_loader.py
src/ising/evaluation/: __init__.py  evaluate.py
src/ising/models/: cnn.py  dnn.py
src/ising/notebook/: exploration.ipynb
src/ising/plotting/: __init__.py  plotting.py
src/ising/training/: __init__.py  adversarial.py  train_cnn.py  train_dnn.py
src/ising/utils/: ising_generator.py
tests/: test_cnn.py  test_data_loader.py  test_dnn.py
