# Optional pyproject.toml for modern Python packaging
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ising-ml-criticality"
version = "0.1.0"
description = "ML for Ising model criticality"
authors = [
  { name="Your Name", email="your@email.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "h5py",
    "torch",
    "torchvision"
]
